--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -306,7 +306,7 @@ textarea {
     font-family: MKStencilsansBlack;
     src: url('/font/MKStencilsansBlack.ttf'),
 }
-body {
+body, #gamelist {
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-color: black;
