--- a/client/interface/css/main.css
+++ b/client/interface/css/main.css
@@ -397,7 +397,8 @@ iframe .home header.header.clear {
     border-right: none;
     font-family: sans-serif;
     text-align: center;
-    height: 42px;
+    min-height: 42px;
+    overflow:auto;
     color:white;
     background: -webkit-linear-gradient(#aaa, #ddd);
     line-height: 42px;
