--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -424,7 +424,8 @@ aside {
 }
 .lander-main li:first-child {
     background: rgba(0, 0, 0, .2);
-    border: 5px solid rgba(255, 200, 200, .2);
+    border: 1px solid rgba(255, 200, 200, .2);
+    padding:5px;
 }
 article {
     width: 50%;
