--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -426,6 +426,7 @@ aside {
     background: rgba(0, 0, 0, .2);
     border: 1px solid rgba(255, 200, 200, .2);
     padding:5px;
+    border-radius: 3px;
 }
 article {
     width: 50%;
