--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -423,10 +423,10 @@ aside {
     display: inline-block;
 }
 .lander-main li:first-child {
-    background: rgba(0, 0, 0, .2);
+    background: rgba(0, 0, 0, .9);
     border: 1px solid rgba(255, 200, 200, .2);
-    padding:5px;
-    border-radius: 3px;
+    padding: 16px 56px;
+    border-radius: 40px;
 }
 article {
     width: 50%;
@@ -846,12 +846,15 @@ meter.p1time {
     color: white;
 }
 */
-header a,header a:visited, header {
-color: inherit;
-text-decoration: none;
+
+header a,
+header a:visited,
+header {
+    color: inherit;
+    text-decoration: none;
 }
 header a:hover {
-    color:pink;
+    color: pink;
 }
 .undefined {
     display: none
@@ -1053,7 +1056,6 @@ header a:hover {
     box-shadow: 0 0 21px white, 0 0 59px 21px rgba(255, 0, 0, .5);
     border: none !important;
 }
-
 .in-iframe .webonly {
     display: none;
 }
