--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -340,7 +340,8 @@ h2 {
     margin-top: -0px;
     text-align: center;
     margin: 0 auto;
-    padding: 0;
+    padding-top: 0;
+    padding-bottom: 10px;;
     font-family: 'Poiret One', cursive;
     text-shadow: 0 0 1px #777;
     font-weight: 200;
@@ -419,15 +420,16 @@ ul#mirrors {
 .lander-main li {
     display: inline-block;
     text-shadow: 0 0 5px rgba(255, 255, 255, .2);
-    color: hotpink;
+    color: silver;
     padding: 5px;
     margin: 5px;
     font-size: .8em;
     display: inline-block;
 }
 .lander-main li:first-child {
-    background: rgba(0, 0, 0, .9);
-    border: 1px solid rgba(255, 200, 200, .2);
+    background-color: rgba(255, 100, 200, .8);
+    color: white;
+    border: 1px solid white;
     padding: 10px 52px;
     border-radius: 40px;
     clear: both;
