--- a/server/http/lightIRC/css/black.css
+++ b/server/http/lightIRC/css/black.css
@@ -12,6 +12,7 @@
 /* Global settings */
 lightIRC {
 	fontFamily:Verdana;
+    background:transparent;
 }
 
 /* Background gradient settings. Set both items to the same value if you want a solid background color */
