--- a/server/http/lightIRC/css/black.css
+++ b/server/http/lightIRC/css/black.css
@@ -12,7 +12,7 @@
 /* Global settings */
 lightIRC {
 	fontFamily:Verdana;
-    background:transparent;
+    background:#00000044;
 }
 
 /* Background gradient settings. Set both items to the same value if you want a solid background color */
