--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -315,6 +315,7 @@ body {
     font-family: 'Roboto', sans-serif;
     font-size: 15px;
     font-weight: 400;
+    overflow: hidden;
 }
 #logo {
     margin-top: -35px;
