--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -467,6 +467,9 @@ article {
 header {
     height: 100vh;
     overflow: hidden;
+    position: absolute;
+    top:100vh;
+    width: 100vw;
 }
 .iconic {
     background: green;
