--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -352,6 +352,7 @@ header,
 .game {
     min-height: 450px;
     margin: 0 auto;
+    padding-bottom: 20px;
     color: white;
     background: rgba(0, 0, 0, .65);
     overflow: auto;
