--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -361,8 +361,6 @@ header,
 section {
     width: 100%;
     min-height: 800px;
-    background-color: white;
-    padding-top: 40px;
 }
 aside {
     width: 50%;
@@ -381,7 +379,7 @@ aside {
     padding: 5px;
     text-align: center;
     margin: 0 auto;
-    width: 30%;
+    width: 80%;
 }
 .featurelist li {
     list-style: none;
@@ -889,6 +887,9 @@ header a:hover {
     box-shadow: 0 0 21px white, 0 0 59px 21px rgba(255, 0, 0, .5);
     border: none !important;
 }
+.web .launcheronly {
+    display:none  !important;
+}
 .in-iframe .webonly {
     display: none;
 }
@@ -959,6 +960,55 @@ float: left;
 margin-top: 5px;
 margin-left: .5%;
 }
+#gamefilter {
+    background: white;
+    width: 30vw;
+    margin 1vh 2vw;
+    font-size: 12px;
+    float: right;
+    padding: 5px;
+    height: 92.5vh;
+    padding-top: 28px;
+    border-left: 1px solid black;
+}
+#gamefilter label {
+    display: block;
+    width: 100%;
+    line-height: 1.5em;
+    padding: 0;
+    margin-top: 1vh;
+}
+#gamefilter label select,
+#gamefilter label input {
+    float: right;
+    display: block;
+    width: 50%;
+}
+.incasing {
+    padding: 5px;
+    border: 1px solid silver;
+}
+#gamefilter button {
+    margin-top: 20px;
+    display: inline-block;
+}
+section#gamelistsection {
+padding-top: 0;
+background: transparent;
+}
+div#gamelist {
+width: 70vw;
+margin: auto 0;
+}
+
+.in-iframe div#gamelist {
+width: 70vw;
+margin: auto;
+}
+.in-iframe {
+    float:left
+}
+
 /* =========================================
 =================================
    Media Queries
