--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -349,14 +349,30 @@ h2 {
     font-weight: 200;
     color: #aaa;
 }
-header,
-.game {
+header {
     min-height: 450px;
     margin: 0 auto;
     padding-bottom: 40px;
     color: white;
     background: rgba(0, 0, 0, .65);
     overflow: auto;
+}
+.game {
+background: rgba(0, 0, 0, .65);
+width: 48%;
+height: 40px;
+float: left;
+border: 1px solid;
+margin: 2px 1%;
+padding: 5px;
+    color: white;
+
+}
+.in-iframe #gamelistitems {
+width: 70vw;
+}
+.game.started {
+    opacity:.2;
 }
 section {
     width: 100%;
@@ -397,7 +413,7 @@ ul#mirrors {
     padding-right: 0;
 }
 .downloadbutton {
-    background: rgba(5, 100, 0, .5);
+    background: rgba(255, 0, 200, .5);
     border-radius: 21px;
     width: 134px;
     display: block;
@@ -483,12 +499,7 @@ header {
     font-size: 2em;
     width: 100%;
 }
-.game {
-    background: rgba(0, 0, 0, .65);
-    height: 100%;
-    min-height: 40px;
-    width: 100%
-}
+
 .gamelobby {
     width: 580px;
     margin: 0 auto;
@@ -536,9 +547,16 @@ header {
     float: right;
 }
 .game span {
-    text-align: right;
-    width: 50%;
-    display: inline-block;
+text-align: right;
+/* width: 30%; */
+display: inline-block;
+padding: 2px;
+border: 1px solid silver;
+line-height: 1em;
+float: right;
+margin-top: 4px;
+padding-top: 0px;
+padding-bottom: 6px;
 }
 .game span.major {
     text-shadow: 0 0 3px #fff;
@@ -888,7 +906,7 @@ header a:hover {
     border: none !important;
 }
 .web .launcheronly {
-    display:none  !important;
+    display: none !important;
 }
 .in-iframe .webonly {
     display: none;
@@ -899,14 +917,51 @@ header a:hover {
     left: 5px;
     display: block
 }
+#hostSettings {
+    background: rgba(0, 0, 0, .5);
+    width: 40%;
+    padding: 10px;
+    margin: 0 auto;
+    color: white;
+    border: 1px solid white;
+    min-height: 0;
+    font-size: .95em;
+    height: 80%;
+    margin-top: 2.5%;
+}
+#hostSettings select,
+#hostSettings input,#settings select,
+#settings input,  {
+    width: 45%;
+    border: 1px solid whitesmoke;
+    height: 1.5em;
+    background: rgba(255, 255, 255, .5);
+    /* color: white; */
+    font-size: 0.9em;
+    line-height: 1.1em;
+    padding: .1em;
+}
+#hostSettings label,#settings label {
+    display: inline-block;
+    padding-bottom: 2px;
+    width: 50%;
+}
+#creategameok,
+#creategamecancel {
+    width: 100%;
+    display: inline-block;
+    padding: 5px;
+    margin: 5% auto;
+    border: 1px solid black;
+    text-align: center;
+}
 .chatcontainer {
-width: 98%;
-height: 100%;
-overflow: auto;
-padding: 1%;
-margin: 0 auto;
-color: white;
-
+    width: 98%;
+    height: 100%;
+    overflow: auto;
+    padding: 1%;
+    margin: 0 auto;
+    color: white;
 }
 .chattitle {
     border: 1px solid white;
@@ -943,22 +998,22 @@ color: white;
     border: 1px solid white;
 }
 input#chatinput {
-background: transparent;
-border: 1px solid white;
-margin-top: 5px;
-height: 5%;
-padding: 2px;
-margin-left: .5%;
-width: 69.5%;
-float: left;
+    background: transparent;
+    border: 1px solid white;
+    margin-top: 5px;
+    height: 5%;
+    padding: 2px;
+    margin-left: .5%;
+    width: 69.5%;
+    float: left;
 }
 .chatsubmit {
-border: 1px solid white;
-width: 5%;
-height: 5%;
-float: left;
-margin-top: 5px;
-margin-left: .5%;
+    border: 1px solid white;
+    width: 5%;
+    height: 5%;
+    float: left;
+    margin-top: 5px;
+    margin-left: .5%;
 }
 #gamefilter {
     background: white;
@@ -993,22 +1048,20 @@ margin-left: .5%;
     display: inline-block;
 }
 section#gamelistsection {
-padding-top: 0;
-background: transparent;
+    padding-top: 0;
+    background: transparent;
 }
 div#gamelist {
-width: 70vw;
-margin: auto 0;
+    width: 70vw;
+    margin: auto 0;
 }
-
 .in-iframe div#gamelist {
-width: 70vw;
-margin: auto;
+    width: 70vw;
+    margin: auto;
 }
 .in-iframe {
-    float:left
+    float: left
 }
-
 /* =========================================
 =================================
    Media Queries
