--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -316,6 +316,7 @@ body {
     font-size: 15px;
     font-weight: 400;
     overflow: hidden;
+    width: 100vw;
 }
 #logo {
     margin-top: -35px;
