--- a/server/http/handlebars/news.handlebars
+++ b/server/http/handlebars/news.handlebars
@@ -2,8 +2,8 @@
 <article>
     <h2>{{Title}}</h2>
     <h3>{{Subtitle}}</h3>
-    <div class='newcontent'>
-        {{Content}}
+    <div class='newscontent'>
+        {{{Content}}}
     </div>
     <div>
         {{Author}} - on {{Date}}
