--- a/server/http/handlebars/news.handlebars
+++ b/server/http/handlebars/news.handlebars
@@ -6,7 +6,7 @@
         {{{Content}}}
     </div>
     <div>
-        {{Author}} - on {{Date}}
+        by {{Author}} - on {{Date}}
     </div>
 </article>
 {{/each}}
