--- a/server/http/handlebars/faq.handlebars
+++ b/server/http/handlebars/faq.handlebars
@@ -1,6 +1,6 @@
 {{#each FAQ}}
 <article>
     <span class="question">Question:</span> {{Question}}<br />
-    <span class="question">Question:</span> {{Answer}}
+    <span class="question">Question:</span> {{{Answer}}}
 </article>
 {{/each}}
