--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -1211,23 +1211,35 @@ div#gamelist {
         page-break-after: avoid;
     }
 }
-
-div[data-game^"200"]{}
-div[data-game^"201"]{}
-div[data-game^"202"]{}
-div[data-game^"203"]{}
-div[data-game^"210"]{ /* most preferenced */
+div[data-game^="0"]{ /* OCG */
+    border-color:yellow;
+}
+div[data-game^="1"]{ /* TCG */
+    border-color:blue;
+}
+div[data-game^="2"]{ /* TCG/OCG */
     border-color:green;
 }
-div[data-game^"212"]{}
-div[data-game^"213"]{}
-div[data-game^"220"]{}
-div[data-game^"221"]{}
-div[data-game^"222"]{}
-div[data-game^"223"]{}
-div[data-game^"230"]{}
-div[data-game^"231"]{}
-div[data-game^"232"]{}
-div[data-game^"233"]{}
-div[data-game^"300"]{}
+div[data-game^="3"]{ /* Anime */
+    border-color:pink;
+}
 
+
+div[data-game^="00"],
+div[data-game^="10"],
+div[data-game^="20"],
+div[data-game^="30"]{ /* single */
+
+}
+div[data-game^="01"],
+div[data-game^="11"],
+div[data-game^="21"],
+div[data-game^="31"]{ /* match */
+    border-width: 2px;
+}
+div[data-game^="02"],
+div[data-game^="12"],
+div[data-game^="22"],
+div[data-game^="32"]{ /* tags */
+    border-width: 4px;
+}
