Revert "more vibrant pink"
This reverts commit ed4cd9c57fea13fd57de4453bed2493e8e9ca635.

--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -1224,8 +1224,8 @@ div[data-game^="2"]{ /* TCG/OCG */
     color:green;
 }
 div[data-game^="3"]{ /* Anime */
-    border-color:#F2A;
-    color:#e2A; /* more vibrant pink */
+    border-color:pink;
+    color:pink;
 }
 
 
