--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -1455,7 +1455,10 @@ div[data-game^="32"] {
     border-width: 4px;
 }
 
+.game:not([data-game*=",0,5,0,"]),
 .game:not([data-game*=",0,5,1,"]),
+.game:not([data-game*=",0,5,2,"]),
+.game:not([data-game*=",0,5,3,"]),
 .game:not([data-game*="OOO"]) {
     /* cheating! */
     
