--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -417,6 +417,7 @@ header {
     padding-bottom: 40px;
     color: white;
     background: rgba(0, 0, 0, .65);
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(0,0,0,1)), color-stop(7%,rgba(1,1,1,1)), color-stop(33%,rgba(6,6,6,0)), color-stop(49%,rgba(9,9,9,0)), color-stop(89%,rgba(17,17,17,1)), color-stop(100%,rgba(19,19,19,1)));
     overflow: auto;
 }
 
