--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -424,7 +424,8 @@ header {
 .game {
     background: rgba(0, 0, 0, .65);
     width: 48%;
-    height: 60px;
+    min-height:40px;
+    max-height:60px;
     float: left;
     border: 1px solid;
     margin: 2px 1%;
@@ -1436,7 +1437,8 @@ div[data-game^="2"] {
 }
 
 div[data-game^="2"]:not(.started) {
-    background: rgba(0,250,0,.5);
+    background-image : url(http://ygopro.us/img/tcgocg.png);
+    background-size : cover;
     color: white;
 }
 
